--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <a class="nav-link page-scroll" href="#slider-area">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#services">Services</a>
+                <a class="nav-link page-scroll" href="#services">Boxes</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#features">Features</a>
+                <a class="nav-link page-scroll" href="#features">Nosotros</a>
               </li>                            
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link page-scroll" href="#portfolios">Works</a>
               </li>            
               <li class="nav-item">
@@ -61,7 +61,7 @@
               </li> 
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#contact">Contact</a>
-              </li> 
+              </li>  -->
             </ul>              
           </div>
         </div>
@@ -73,10 +73,12 @@
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
               <img class="imgCarousel" src="img/slider/foto peneg-02.png" alt="">
-              <div class="carousel-caption text-right">
-                <h2 class="wow fadeInRight" data-wow-delay="0.4s">Plantasctic Club</h2>
-                <h4 class="wow fadeInRight" data-wow-delay="0.6s">Renová tus espacios con el poder del verde</h4>
-                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">Download</a>
+              <div class="carousel-caption text-left">
+                <h1 class="wow fadeInLeft" data-wow-delay="0.4s">Conectá con lo natural</h1>
+                <div class="col-6">
+                  <h3 class="wow fadeInLeft" data-wow-delay="0.6s">La experiencia de esperar la seleccion de un grupo experto en plantas.</h3>
+                </div>
+                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInLeft" data-wow-delay="0.9s">Ver mas</a>
               </div>
             </div>
           </div>
@@ -88,9 +90,10 @@
     <!-- Services Section Start -->
     <section id="services" class="section">
       <div class="container">
-        <div class="section-header">          
-          <h2 class="section-title">Our Services</h2>
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy</p>
+        <div class="section-header">
+          <h4 class="section-subtitle">DEL CULTIVO A TU CASA</h4>
+          <h2 class="section-title">Te contamos el proceso</h2>
+          <h3 class="section-subtitle">Tres simples pasos para tener eso que tanto querés.</h3>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-xs-12">
