preguntas frecuentes colapsable

--- a/index.html
+++ b/index.html
@@ -700,46 +700,116 @@
 
     <!-- Testimonial Section End --> 
 
-    <!-- comentarios Section Start -->
-    <section id="services" class="section" >
-      <div class="container">
-        <div class="section-header">
-          <h2>Preguntas frecuentes</h2>
-        </div>
-        <div class="row d-flex justify-content-between">
-          <h3 class="section-subtitle" style="font-size: 25px;">¿Cómo se donde está mi pedido?</h3>
-          <h3 class="section-subtitle" style="font-size: 28px;">+</h3>
-        </div>
-        <div class="linea"></div>
-        <div class="row d-flex justify-content-between">
-          <h3 class="section-subtitle" style="font-size: 25px; padding-top: 20px;">¿Puedo darme de baja en cualquier momento?</h3>
-          <h3 class="section-subtitle" style="font-size: 28px;padding-top: 20px;">+</h3>
-
-        </div>
-        <div class="linea"></div>
-        <div class="row d-flex justify-content-between">
-          <h3 class="section-subtitle" style="font-size: 25px;padding-top: 20px;">¿Cuáles son los métodos de pago?</h3>
-          <h3 class="section-subtitle" style="font-size: 28px;padding-top: 20px;">+</h3>
-
-        </div>
-        <div class="linea"></div>
-        <div class="row d-flex justify-content-between">
-          <h3 class="section-subtitle" style="font-size: 25px;padding-top: 20px;">¿Qué pasa si mi planta llega en mal estado?</h3>
-          <h3 class="section-subtitle" style="font-size: 28px;padding-top: 20px;">+</h3>
-
-        </div>
-        <div class="linea"></div>
-        <div class="row d-flex justify-content-between">
-          <h3 class="section-subtitle" style="font-size: 25px;padding-top: 20px;">¿Quiénes y cómo seleccionan las plantas que me llegan?</h3>
-          <h3 class="section-subtitle" style="font-size: 28px;padding-top: 20px;">+</h3>
-
-        </div>
-        <div class="linea"></div>
-      </div>
-    </section>
-    <!-- Features Section End -->     
 
 
+    <div class="container">
+      <h1 class="text-center mt-5">Preguntas Frecuentes</h1>
+      
+      <div class="accordion mt-4" id="faqAccordion">
+          <div>
+              <div id="heading1">
+                  <h3 class="mb-0 row d-flex justify-content-between">
+                      <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1" style="font-size: 25px; color: #263238;">
+                        ¿Cómo se donde está mi pedido?
+                      </button>
+                      <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1" style="font-size: 28px; color: #263238;">
+                        +
+                      </button>
+                  </h3>
+              </div>
+              <div id="collapse1" class="collapse" aria-labelledby="heading1" data-parent="#faqAccordion">
+                  <div>
+                      Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
+                  </div>
+              </div>
+          <div class="linea"></div>
+          </div>
+        <div>
+
+          <div class="accordion mt-4" id="faqAccordion">
+            <div>
+                <div id="heading2">
+                    <h3 class="mb-0 row d-flex justify-content-between">
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse2" style="font-size: 25px; color: #263238;">
+                          ¿Puedo darme de baja en cualquier momento?
+                        </button>
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse2" style="font-size: 28px; color: #263238;">
+                          +
+                        </button>
+                    </h3>
+                </div>
+                <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#faqAccordion">
+                    <div>
+                        Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
+                    </div>
+                </div>
+            <div class="linea"></div>
+            </div>
+          <div>
+
+          <div class="accordion mt-4" id="faqAccordion">
+            <div>
+                <div id="heading4">
+                    <h3 class="mb-0 row d-flex justify-content-between">
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse4" style="font-size: 25px; color: #263238;">
+                          ¿Cuáles son los métodos de pago?
+                        </button>
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse4" style="font-size: 28px; color: #263238;">
+                          +
+                        </button>
+                    </h3>
+                </div>
+                <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#faqAccordion">
+                    <div>
+                        Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
+                    </div>
+                </div>
+            <div class="linea"></div>
+            </div>
+          <div>
+
+
+            <div class="accordion mt-4" id="faqAccordion">
+              <div>
+                  <div id="heading5">
+                      <h3 class="mb-0 row d-flex justify-content-between">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse5" style="font-size: 25px; color: #263238;">
+                            ¿Qué pasa si mi planta llega en mal estado?
+                          </button>
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse5" style="font-size: 28px; color: #263238;">
+                            +
+                          </button>
+                      </h3>
+                  </div>
+                  <div id="collapse5" class="collapse" aria-labelledby="heading5" data-parent="#faqAccordion">
+                      <div>
+                          Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
+                      </div>
+                  </div>
+              <div class="linea"></div>
+              </div>
+            <div>
+
+          <div class="accordion mt-4" id="faqAccordion">
+            <div>
+                <div id="heading6">
+                    <h3 class="mb-0 row d-flex justify-content-between">
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse6" style="font-size: 25px; color: #263238;">
+                          ¿Quiénes y cómo seleccionan las plantas que me llegan?
+                        </button>
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse6" style="font-size: 28px; color: #263238;">
+                          +
+                        </button>
+                    </h3>
+                </div>
+                <div id="collapse6" class="collapse" aria-labelledby="heading6" data-parent="#faqAccordion">
+                    <div>
+                        Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
+                    </div>
+                </div>
+            <div class="linea" style="padding-bottom: 50px;"></div>
+            </div>
+          <div>
 
 
     <!-- Subcribe Section Start -->
@@ -872,6 +942,5 @@
     <script src="js/form-validator.min.js"></script>
     <script src="js/contact-form-script.js"></script>   
     <script src="js/main.js"></script>
-    
   </body>
 </html>
