--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
 
     <div class="container">
       <h1 class="text-center mt-5">Preguntas Frecuentes</h1>
-      
+
       <div class="accordion mt-4" id="faqAccordion">
           <div>
               <div id="heading1">
@@ -724,7 +724,7 @@
               </div>
           <div class="linea"></div>
           </div>
-        <div>
+        </div>
 
           <div class="accordion mt-4" id="faqAccordion">
             <div>
@@ -745,7 +745,7 @@
                 </div>
             <div class="linea"></div>
             </div>
-          <div>
+          </div>
 
           <div class="accordion mt-4" id="faqAccordion">
             <div>
@@ -766,7 +766,7 @@
                 </div>
             <div class="linea"></div>
             </div>
-          <div>
+          </div>
 
 
             <div class="accordion mt-4" id="faqAccordion">
@@ -788,9 +788,9 @@
                   </div>
               <div class="linea"></div>
               </div>
-            <div>
+            </div>
 
-          <div class="accordion mt-4" id="faqAccordion">
+            <div class="accordion mt-4" id="faqAccordion">
             <div>
                 <div id="heading6">
                     <h3 class="mb-0 row d-flex justify-content-between">
@@ -807,9 +807,10 @@
                         Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
                     </div>
                 </div>
+            </div>
             <div class="linea" style="padding-bottom: 50px;"></div>
             </div>
-          <div>
+          </div>
 
 
     <!-- Subcribe Section Start -->
@@ -827,7 +828,7 @@
                 </div>
               </div>
               <div class="d-flex justify-content-center mt-5">
-              <img style="height:300px;" src="img/bg/foto de abajo de todo.png" alt="">
+                <img style="height:300px;" src="img/bg/foto de abajo de todo.png" alt="">
               </div>
             </div>
           </div>
@@ -906,7 +907,6 @@
       </div>
       <!-- Copyright End -->
 
-    </footer>
     <!-- Footer Section End --> 
 
     <!-- Go To Top Link -->
