--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>Essence - Bootstrap 4 Template</title>
+    <link rel="icon" type="image/x-icon" href="img/icons/fjgfh-04.png">
+    <title>Plantastic Club</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -48,45 +49,44 @@
           </div>
         </div>
       </nav> 
-
-      <!-- Main Carousel Section -->
-      <div id="carousel-area">
-        <div id="carousel-slider" class="carousel slide carousel-fade" data-ride="carousel">
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="imgCarousel" src="img/slider/foto peneg-02.png" alt="">
-              <div class="carousel-caption text-left">
-                <h1 class="wow fadeInLeft" data-wow-delay="0.4s">Conectá con lo natural</h1>
-                <div class="col-6">
-                  <h3 class="wow fadeInLeft" data-wow-delay="0.6s">La experiencia de esperar la seleccion de un grupo experto en plantas.</h3>
-                </div>
-                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInLeft" data-wow-delay="0.9s">Ver mas</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>  
     </header>
     <!-- Header Section End --> 
+
+    <div class="hero">
+      <div class="row">
+          <!-- Columna para el texto en la mitad de la pantalla -->
+          <div class="col-md-6 hero-text">
+              <h1 class="wow fadeInLeft" data-wow-delay="0.4s">Conectá con lo natural</h1>
+              <h3 class="wow fadeInLeft" data-wow-delay="0.6s">Descubre la belleza de la naturaleza en casa con<br>
+                nuestras exclusivas cajas</h3>
+              <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInLeft">Suscribite</a>
+          </div>
+
+          <!-- Columna para la imagen en la mitad de la pantalla -->
+          <div class="col-md-6">
+            <img class="img-fluid hero-image" src="img/slider/ilus home-01.png" alt="">
+          </div>
+      </div>
+  </div>
+
+
 
     <!-- Services Section Start -->
     <section id="services" class="section">
       <div class="container">
         <div class="section-header">
-          <h4 class="section-subtitle">DEL CULTIVO A TU CASA</h4>
           <h2>Te contamos el proceso</h2>
           <h3 class="section-subtitle">Tres simples pasos para tener eso que tanto querés.</h3>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="item-boxes services-item">
+            <div class="item-boxes services-item wow fadeInDown" data-wow-delay="0.2s">
               <div>
-                <img class="iconoServicio" src="img/icons/icono 1.png" alt="">
+                <img class="iconoServicio" style="height: 150px; margin-top: 45px;" src="img/icons/icono 1.png" alt="">
                 <!-- <i class="lni-pencil"></i> -->
               </div>
               <h4>CREAMOS TU BOX</h4>
-              <p>Suscribite al plan que
-                más se adapta a tus
+              <p>Suscribite al plan que más<br>se adapta a tus
                 gustos.</p>
             </div>
           </div>
@@ -97,20 +97,19 @@
                 <!-- <i class="lni-cog"></i> -->
               </div>
               <h4>RELAJATE, YA LLEGA</h4>
-              <p>En unos días tu combo
-                estará en la puerta de
+              <p>En unos días tu combo estará<br>en la puerta de
                 tu casa.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="item-boxes services-item wow fadeInDown" data-wow-delay="0.6s">
               <div>
-                <img class="iconoServicio" src="img/icons/icono 3.png" alt="">
+                <img class="iconoServicio"src="img/icons/icono 3.png" alt="">
                 <!-- <i class="lni-stats-up"></i> -->
               </div>
               <h4>¡A DISFRUTAR!</h4>
               <p>Listo, sólo queda cuidar
-                y disfrutar de tu nueva
+                y<br>disfrutar de tu nueva
                 compañía. 
                 </p>
             </div>
@@ -127,7 +126,6 @@
           <div class="col-lg-6 col-md-6 col-xs-12">
 
         <div class="section-header">          
-          <p class="section-subtitle text-left">UN SERVICIO PENSADO PARA VOS</p>
           <h2 class="text-left">Nuestra propuesta</h2>
         </div>
           <!-- Start featured -->
@@ -135,7 +133,7 @@
               <div class="featured-box">
                 <div class="featured-content">
                   <h4>NO NECESITÁS SER UN EXPERTO</h4>
-                  <p>Toda la información que necesitás la vas a poder encontrar en esta web.</p>
+                  <p>Toda la información que necesitás la<br>vas a poder encontrar en esta web.</p>
                 </div>
               </div>
             </div>
@@ -143,7 +141,7 @@
               <div class="featured-box">
                 <div class="featured-content">
                   <h4>SERVICIO PERSONALIZADO</h4>
-                  <p>Nos ocupamos de que cada cliente reciba la atención que se merece.</p>
+                  <p>Nos ocupamos de que cada cliente<br>reciba la atención que se merece.</p>
                 </div>
               </div>
             </div>
@@ -151,7 +149,7 @@
               <div class="featured-box">
                 <div class="featured-content">
                   <h4>TERAPIA DE JARDINERÍA</h4>
-                  <p>Las plantas pueden tener beneficios terapéuticos y mejorar el bienestar.</p>
+                  <p>Las plantas pueden tener beneficios<br>terapéuticos y mejorar el bienestar.</p>
                 </div>
               </div>
             </div>
@@ -159,7 +157,7 @@
               <div class="featured-box">
                 <div class="featured-content">
                   <h4>EDUCACIÓN SOBRE PLANTAS</h4>
-                  <p>Brindamos información detallada sobre cada tipo de planta.</p>
+                  <p>Brindamos información detallada<br>sobre cada tipo de planta.</p>
                 </div>
               </div>
             </div>
@@ -170,7 +168,6 @@
           </div>
 
         </div>
-        <a href="#" class="btn btn-lg btn-common btn-effect wow" >Suscribirse</a>
 
       </div>
     </section>
@@ -180,10 +177,9 @@
     <div id="pricing" class="section pricing-section">
       <div class="container">
         <div class="section-header">          
-          <p class="section-subtitle" style="font-size: 14px;">DEJATE TENTAR</p>
           <h2 >Elegí la mejor opción</h2>
-          <p class="section-subtitle">Te proponemos tres Boxes para que elijas<br>
-            la que mejor se adapta a tus espacios</p>
+          <h3 style="font-size: 25px;" class="section-subtitle">Te proponemos tres Boxes para que elijas<br>
+            la que mejor se adapta a tus espacios</h3>
         </div>
 
         <div class="row pricing-tables">
@@ -192,8 +188,8 @@
               <div class="pricing-details">
                   <img id="img1" class="imgPricing" src="img/pricing/box 1 bian nuevo.png" alt="">
                 <h2>Plan Aficionado</h2>
-                <p>MENSUAL POR 6 MESES</p>
-                <p>Incluye</p>
+                <h4 style="font-size: 22px;">MENSUAL POR 3 MESES<br>
+                Incluye</h4>
                 <ul>
                   <li>Planta de interior</li>
                   <li>Maceta artesanal</li>
@@ -211,8 +207,8 @@
               <div class="pricing-details">
                   <img id="img2" class="imgPricing" src="img/pricing/box 2 bian nuevo.png" alt="">
                 <h2>Plan Profesional</h2>
-                <p>MENSUAL POR 6 MESES</p>
-                <p>Incluye</p>
+                <h4 style="font-size: 22px;">MENSUAL POR 6 MESES<br>
+                Incluye</h4>
                 <ul>
                   <li>Planta de interior</li>
                   <li>Maceta artesanal</li>
@@ -231,8 +227,8 @@
               <div class="pricing-details">
                   <img id="img3" class="imgPricing" src="img/pricing/box 3 bian nuevo.png" alt="">
                 <h2>Plan Especialista</h2>
-                <p>MENSUAL POR 12 MESES</p>
-                <p>Incluye</p>
+                <h4 style="font-size: 22px;">MENSUAL POR 12 MESES<br>
+                Incluye</h4>
                 <ul>
                   <li>Planta de interior</li>
                   <li>Maceta artesanal</li>
@@ -253,13 +249,63 @@
     <!-- End Pricing Table Section -->
 
 
+    <!-- Testimonial Section Start -->
+<section class="testimonial section">
+  <div class="container">
+    <div class="section-header">          
+      <h2>Por si todavía no sabías</h2>
+      <h3 class="section-subtitle" style="font-size: 25px;">Te contamos un poco más sobre el cuidado de estas<br>
+        plantas y dónde es el mejor lugar para ubicarlas</h3>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div id="testimonials" class="touch-slider owl-carousel">
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-01.jpg" alt="">
+          </div>
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-02.jpg" alt="">
+          </div>
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-03.jpg" alt="">
+          </div>
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-04.jpg" alt="">
+          </div>
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-05.jpg" alt="">
+          </div>
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-06.jpg" alt="">
+          </div>
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-07.jpg" alt="">
+          </div>
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-08.jpg" alt="">
+          </div>
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-09.jpg" alt="">
+          </div>
+          <div class="item d-flex justify-content-center">
+            <img style="height: 450px;" src="img/team/aa-10.jpg" alt="">
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+   
+
  <!-- Features Section Start -->
  <section id="about" class="section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-xs-12" style="padding-top: 100px;">
+      <div class="col-lg-6 col-md-6 col-xs-12" style="padding-top: 200px;">
     <div class="section-header">          
-      <p class="section-subtitle text-left">DE DÓNDE VENIMOS Y HACIA DÓNDE VAMOS</p>
       <h2 class="text-left">Detrás del proyecto</h2>
     </div>
       <!-- Start featured -->
@@ -267,16 +313,16 @@
         <div class="col-12">
           <div class="featured-box">
             <div class="featured-content">
-              <p class="nosotros">Somos Sara y Uma, dos ingenieras agrónomas<br>
+              <h3 class="nosotros">Somos Sara y Uma, dos ingenieras agrónomas<br>
                 centradas en proyectos sociales y de conciecia<br>
                 ecológica. Nos unimos para mejorar la calidad<br>
-                de vida de nuestra amada población argentina.</p>
+                de vida de nuestra amada población argentina.</h3>
             </div>
           </div>
         </div>
       </div>
       <div class="col-6">
-        <img class="imgFeatures" src="img/features/foto quienes somos.jfif" alt="">
+        <img class="imgFeatures" src="img/features/foto quienes somos.png" alt="">
       </div>
 
     </div>
@@ -286,14 +332,14 @@
 <!-- Features Section End -->  
 
 
-    <section id="features" class="section" style="padding-bottom: 0px!important;">
+    <section id="galeria" class="section" style="padding-bottom: 50px!important;">
 
       <div class="container">
       <div class="section-header">
         <div class="section-header">
           <h2>Sumate a nuestra comunidad</h2>
-          <p class="section-subtitle" style="font-size: 20px;">¡Subí a tus redes una foto con tu planta y comentá #Plantasctic para<br>
-            formar parte de la comunidad de plantas mas grande de Argentina!</p>
+          <h3 class="section-subtitle" style="font-size: 25px;">¡Subí a tus redes una foto con tu planta y comentá #Plantasctic para
+            formar parte de la<br>comunidad de plantas más grande de Argentina!</h3>
         </div>
       </div>
       <div class="row">
@@ -488,44 +534,7 @@
 
 
     <!-- Team section Start -->
-<!-- Testimonial Section Start -->
-<section class="testimonial section" style="margin-bottom: 100px;">
-  <div class="container">
-    <div class="section-header">          
-      <h2>Por si todavía no sabías</h2>
-      <p class="section-subtitle" style="font-size: 20px;">Te contamos un poco más sobre el cuidado de estas<br>
-        plantas y dónde es el mejor lugar para ubicarlas</p>
-    </div>
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div id="testimonials" class="touch-slider owl-carousel">
-          <div class="item">
-            <img style="height: 450px;" src="img/team/fotos carrusel_hi copia 3.png" alt="">
-          </div>
-          <div class="item">
-            <img style="height: 450px;" src="img/team/fotos carrusel_hi copia.png" alt="">
-          </div>
-          <div class="item">
-            <img style="height: 450px;" src="img/team/fotos carrusel_hi copia 2.png" alt="">
-          </div>
-          <div class="item">
-            <img style="height: 450px;" src="img/team/fotos carrusel-11.png" alt="">
-          </div>
-          <div class="item">
-            <img style="height: 450px;" src="img/team/fotos carrusel_hi copia 4.png" alt="">
-          </div>
-          <div class="item">
-            <img style="height: 450px;" src="img/team/fotos carrusel_hi copia 5.png" alt="">
-          </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
-
-   
 
 <!-- Call to Action Start -->
     <section class="call-action section">
@@ -549,12 +558,10 @@
     <!-- Testimonial Section Start -->
 
 <!-- Testimonial Section Start -->
-<section class="testimonial section" style="margin-bottom: 50px;">
+<section class="testimonial section">
   <div class="container">
     <div class="section-header">          
-      <h2>Por si todavía no sabías</h2>
-      <p class="section-subtitle" style="font-size: 20px;">Te contamos un poco más sobre el cuidado de estas<br>
-        plantas y dónde es el mejor lugar para ubicarlas</p>
+      <h2>Quienes confiaron en nosotros</h2>
     </div>
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -710,7 +717,7 @@
               <div id="heading1">
                   <h3 class="mb-0 row d-flex justify-content-between">
                       <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1" style="font-size: 25px; color: #263238;">
-                        ¿Cómo se donde está mi pedido?
+                        ¿Cómo sé donde está mi pedido?
                       </button>
                       <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1" style="font-size: 28px; color: #263238;">
                         +
@@ -719,8 +726,8 @@
               </div>
               <div id="collapse1" class="collapse" aria-labelledby="heading1" data-parent="#faqAccordion">
                   <div>
-                      Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
-                  </div>
+                  <p style="font-size: 22px!important;">Cuando realices la compra nosotros te enviaremos un código de seguimiento para que veaas en todo momento donde está tu pedido.
+                  </p></div>
               </div>
           <div class="linea"></div>
           </div>
@@ -740,8 +747,8 @@
                 </div>
                 <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#faqAccordion">
                     <div>
-                        Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
-                    </div>
+                    <p style="font-size: 22px!important;">Sí, podés darte de baja en el momento que quieras, seguramente te pidamos un feedback para sabér qué pasó. También siempre podés volver!
+                    </p></div>
                 </div>
             <div class="linea"></div>
             </div>
@@ -761,8 +768,8 @@
                 </div>
                 <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#faqAccordion">
                     <div>
-                        Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
-                    </div>
+                      <p style="font-size: 22px!important;">Tenemos todos los métodos de pago para ofrecerte, transferencia, débito y crédito.
+                      </p></div>
                 </div>
             <div class="linea"></div>
             </div>
@@ -783,8 +790,8 @@
                   </div>
                   <div id="collapse5" class="collapse" aria-labelledby="heading5" data-parent="#faqAccordion">
                       <div>
-                          Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
-                      </div>
+                        <p style="font-size: 22px!important;">No te preocupes, durante el envío puede pasar que tu planta se reseque. Mandanos una foto y si con el contenido de youtube no podes resolverlo, en menos de una semana hacemos el cambio.
+                        </p></div>
                   </div>
               <div class="linea"></div>
               </div>
@@ -804,7 +811,7 @@
                 </div>
                 <div id="collapse6" class="collapse" aria-labelledby="heading6" data-parent="#faqAccordion">
                     <div>
-                        Bootstrap es un framework de diseño front-end que facilita la creación de sitios web y aplicaciones web responsivas y atractivas.
+                      <p style="font-size: 22px!important;">Somos dos ingenieras agrónomas que amamos las plantas de interior. Cada especie está pensada para que en conjunto quede un espacio mas armonioso y lleno de vida.</p>
                     </div>
                 </div>
             </div>
@@ -891,8 +898,8 @@
               </div>    
             </div>
             <div class="col-4">
-              <div class="d-flex align-items-end">  
-                <ul class="nav nav-inline" style="padding-top: 30px;">
+              <div class="site-info">  
+                <ul class="nav nav-inline" >
                   <li class="nav-item">
                     <p class="nav-link active" href="#">Términos y condiciones</p>
                   </li>
